--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Portfolio - Rafael Leal de Azevedo</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,24 +14,30 @@
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/header.css">
     
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="assets/img/logo_portfolio.png" alt="">
-        <nav>
-            <a href="">Skills</a>  
-            <a href="">Projects</a>
-            <a href="">About</a>
-            <a href="">Contacts</a>
-            <a id="button" href="" lang="EN">Download CV</a>
+        <nav class="navigation">
+            <a class="action" href="">Skills</a>  
+            <a class="action" href="">Projects</a>
+            <a class="action" href="">About</a>
+            <a class="action" href="">Contacts</a>
+            <a class="button" href="" lang="EN">Download CV</a>
         </nav>        
     </header>
 
-    <div id="box">
-        <h1>Azevedo L Rafael</h1>
-        <h2>System Analyst</h2>
+    <div class="box">
+        <h1 class="title">Azevedo L Rafael</h1>
+        <h2 class="subtitle">System Analyst</h2>
     </div>
+
+    <a class="button" href="" lang="EN">Download CV</a>
+    <a class="button" href="" lang="EN">Contacts</a>
 </body>
 </html>
 
