--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
     
 </head>
 <body>
@@ -31,14 +32,19 @@
         </nav>        
     </header>
 
-    <div class="box">
-        <h1 class="title">Azevedo L Rafael</h1>
-        <h2 class="subtitle">System Analyst</h2>
-    </div>
-
-    <a class="button" href="" lang="EN">Download CV</a>
-    <a class="button" href="" lang="EN">Contacts</a>
-</body>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
+                <h1 class="title">Azevedo L Rafael</h1>
+                <h2 class="subtitle">System Analyst</h2>
+            </div>
+            <div class="navigation">
+                <a class="button" href="" lang="EN">Download CV</a>
+                <a class="button" href="" lang="EN">Contacts</a>
+            </div>
+        </div>
+    </section>
+</body> 
 </html>
 
 
