Create the -second variation to component title

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/skills.css">
     
 </head>
 <body>
@@ -44,6 +45,9 @@
             </div>
         </div>
     </section>
+
+    <h2 class="title -second">Skills</h2>
+
 </body> 
 </html>
 
