--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
-    <link rel="stylesheet" href="css/components/skills.css">
+    <link rel="stylesheet" href="css/components/section.css">
     
 </head>
 <body>
@@ -46,8 +46,10 @@
         </div>
     </section>
 
-    <h2 class="title -second">Skills</h2>
-
+    <section class="section">
+        <h2 class="title -second">Skills</h2>
+    </section>
+    
 </body> 
 </html>
 
