--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/main-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
+    <link rel="stylesheet" href="css/components/main-card.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
     
 </head>
 <body>
@@ -51,15 +54,76 @@
     <section class="section">
         <h2 class="main-title -second">Skills</h2>
 
-        <article class="main-skill">
-            <img class="icon" img src="img/icon_abap.png" alt="logo abap">
-            <div class="right">         
-                <h3 class="title">ABAP</h3>
-                <progress class="progress-bar" max="100" value="70">70%</progress>
-            </div>
-        </article>
+        <div class="wrapper-skill">    
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP1</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP2</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP3</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP4</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP5</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+            <article class="main-skill">
+                <img class="icon" img src="img/icon_abap.png" alt="logo abap">
+                <div class="right">         
+                    <h3 class="title">ABAP6</h3>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+            </article>
+        </div>
+    </section>   
+
+    <section class="section -second">
+        <h2 class="main-title -second">Projects</h2>
+        <div class="main-card">            
+            <figure class="card-project">
+                <img class="logo" src="img/icon_project.png" alt="Project Embraer">
+            </figure>
+
+            <figure class="card-project -blue">
+                <img class="logo" src="img/icon_project.png" alt="Project Portfolio">
+            </figure>
+
+            <figure class="card-project">
+                <img class="logo" src="img/icon_project.png" alt="Project Vertex">
+            </figure>
+        </div>
     </section>
-        
+
 </body> 
 </html>
 
