--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/components/main-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
-    <link rel="stylesheet" href="css/components/main-card.css">
+    <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
     
 </head>
@@ -109,7 +109,7 @@
 
     <section class="section -second">
         <h2 class="main-title -second">Projects</h2>
-        <div class="main-card">            
+        <div class="wrapper-card">            
             <figure class="card-project">
                 <img class="logo" src="img/icon_project.png" alt="Project Embraer">
             </figure>
