Add the links to card-projects

--- a/index.html
+++ b/index.html
@@ -109,18 +109,22 @@
 
     <section class="section -second">
         <h2 class="main-title -second">Projects</h2>
-        <div class="wrapper-card">            
-            <figure class="card-project">
-                <img class="logo" src="img/icon_project.png" alt="Project Embraer">
-            </figure>
-
-            <figure class="card-project -blue">
-                <img class="logo" src="img/icon_project.png" alt="Project Portfolio">
-            </figure>
-
-            <figure class="card-project">
-                <img class="logo" src="img/icon_project.png" alt="Project Vertex">
-            </figure>
+        <div class="wrapper-card">
+            <a href="https://lealrafael.github.io/" target="_blank">            
+                <figure class="card-project">
+                    <img class="logo" src="img/icon_project.png" alt="Project Embraer">
+                </figure>
+            </a>
+            <a href="">
+                <figure class="card-project -blue">
+                    <img class="logo" src="img/icon_project.png" alt="Project Portfolio">
+                </figure>
+            </a>
+            <a href="">
+                <figure class="card-project">
+                    <img class="logo" src="img/icon_project.png" alt="Project Vertex">
+                </figure>
+            </a>
         </div>
     </section>
 
