--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
-    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/section.css">
@@ -30,10 +30,10 @@
     <header class="header">
         <img src="assets/img/logo_portfolio.png" alt="">
         <nav class="navigation">
-            <a class="action" href="">Skills</a>  
-            <a class="action" href="">Projects</a>
-            <a class="action" href="">About</a>
-            <a class="action" href="">Contacts</a>
+            <a class="main-action" href="">Skills</a>  
+            <a class="main-action" href="">Projects</a>
+            <a class="main-action" href="">About</a>
+            <a class="main-action" href="">Contacts</a>
             <a class="button" href="" lang="EN">Download CV</a>
         </nav>        
     </header>
