--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/main-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -38,7 +38,7 @@
         </nav>        
     </header>
 
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
             <div class="box">
                 <h1 class="main-title">Azevedo L Rafael</h1>
