--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
-    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
@@ -34,7 +34,7 @@
             <a class="main-action" href="">Projects</a>
             <a class="main-action" href="">About</a>
             <a class="main-action" href="">Contacts</a>
-            <a class="button" href="" lang="EN">Download CV</a>
+            <a class="main-button" href="" lang="EN">Download CV</a>
         </nav>        
     </header>
 
@@ -45,8 +45,8 @@
                 <h2 class="subtitle">System Analyst</h2>
             </div>
             <div class="navigation">
-                <a class="button" href="" lang="EN">Download CV</a>
-                <a class="button" href="" lang="EN">Contacts</a>
+                <a class="main-button" href="" lang="EN">Download CV</a>
+                <a class="main-button" href="" lang="EN">Contacts</a>
             </div>
         </div>
     </section>
