--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
-    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/main-skill.css">
@@ -27,7 +27,7 @@
     
 </head>
 <body>
-    <header class="header">
+    <header class="main-header">
         <img src="assets/img/logo_portfolio.png" alt="">
         <nav class="navigation">
             <a class="main-action" href="">Skills</a>  
