--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
-    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/main-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
@@ -51,7 +51,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
 
         <div class="wrapper-skill">    
@@ -107,7 +107,7 @@
         </div>
     </section>   
 
-    <section class="section -second">
+    <section class="main-section -second">
         <h2 class="main-title -second">Projects</h2>
         <div class="wrapper-card">
             <a href="https://lealrafael.github.io/" target="_blank">            
