Change the component subtitle to main-subtitle

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/reset_mine.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
@@ -42,7 +42,7 @@
         <div class="wrapper">
             <div class="main-box">
                 <h1 class="main-title">Azevedo L Rafael</h1>
-                <h2 class="subtitle">System Analyst</h2>
+                <h2 class="main-subtitle">System Analyst</h2>
             </div>
             <div class="navigation">
                 <a class="main-button" href="" lang="EN">Download CV</a>
