Update index with new components

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
+    <link rel="stylesheet" href="css/components/main-description.css">
+    <link rel="stylesheet" href="css/components/mainbutton-arrow.css">
+    <link rel="stylesheet" href="css/components/node-card.css">
+    <link rel="stylesheet" href="css/components/main-timeline.css">
+    
     
 </head>
 <body>
@@ -127,6 +132,66 @@
             </a>
         </div>
     </section>
+
+    <section class="main-section -third">
+        <h2 class="main-title -second">About</h2>
+
+            <p class="main-description">Nowadays, Software Engineer in John Deere Company working specifically with SAP-ABAP Developer and others technologies. In the past he was a production line employee, he started in IT area as a Technical Infraestructure with a goal to improve your knowledge in development and work with that. Rafael is always discovering new things and currently studying DEV for WEB in order to start put it in practise, when he is not playing video games making lives, talking with friends or doing lovely thing with his wife.</p>
+
+            <section class="main-timeline">
+                <button class="mainbutton-arrow -left"><span class="content">Left</span></button>
+
+                <div class="items">
+                    <div class="elements">
+                        <figure class="node-card">
+                            <figcaption class="title">2012</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-locaweb.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+
+                        <figure class="node-card -clean">
+                            <figcaption class="title">2014</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-caelum.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+
+                        <figure class="node-card -firstcolor">
+                            <figcaption class="title">2016</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-getninjas.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+
+                        <figure class="node-card -clean">
+                            <figcaption class="title">2017</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-caelum.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+
+                        <figure class="node-card">
+                            <figcaption class="title">2018</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-impulso.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+
+                        <figure class="node-card -firstcolor">
+                            <figcaption class="title">2020</figcaption>
+                            <div class="logo">
+                                <img src="img/logo-collabcode.png" alt="Logo LocaWeb">
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+
+                <button class="mainbutton-arrow -right"><span class="content">Right</span></button>
+            </section>  
+    </section>
+
+    <script src="/js/components/main-timeline.js"></script>
 
 </body> 
 </html>
